# latScraper

./: pyproject.toml
htmlPages/: 101.html  gcpns.html
scraper/: MyParser.py  all_small.py  small_links.txt
